this doesnt compile, refactored

--- a/dotNet5782_0545_8228/BL/BL.csproj
+++ b/dotNet5782_0545_8228/BL/BL.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\DAL\DALObject.csproj" />
   </ItemGroup>
 
 </Project>
