--- a/dotNet5782_0545_8228/DALFacade/DALFacade.csproj
+++ b/dotNet5782_0545_8228/DALFacade/DALFacade.csproj
@@ -1,12 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace />
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\DAL\DALObject.csproj" />
-  </ItemGroup>
 
 </Project>
