no more squigglies

--- a/dotNet5782_0545_8228/BL/BL.csproj
+++ b/dotNet5782_0545_8228/BL/BL.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DAL\DALObject.csproj" />
+    <!-- <ProjectReference Include="..\DAL\DALObject.csproj" /> -->
+    <ProjectReference Include="..\DALFacade\DALFacade.csproj" />
   </ItemGroup>
 
 </Project>
