POs and OBservable collections and new windows

--- a/dotNet5782_0545_8228/PL/PL.csproj
+++ b/dotNet5782_0545_8228/PL/PL.csproj
@@ -24,4 +24,8 @@
     <Resource Include="images\XDS.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Page Include="App.xaml" />
+  </ItemGroup>
+
 </Project>
