no more window esceptions for packages

--- a/dotNet5782_0545_8228/PL/PL.csproj
+++ b/dotNet5782_0545_8228/PL/PL.csproj
@@ -12,6 +12,7 @@
     <None Remove="images\drone-package.png" />
     <None Remove="images\drone-x.png" />
     <None Remove="images\drone.png" />
+    <None Remove="images\dronenopackage.png" />
     <None Remove="images\update-drone-image.png" />
     <None Remove="images\XDS.png" />
   </ItemGroup>
@@ -26,6 +27,7 @@
     <Resource Include="images\drone-package.png" />
     <Resource Include="images\drone-x.png" />
     <Resource Include="images\drone.png" />
+    <Resource Include="images\dronenopackage.png" />
     <Resource Include="images\update-drone-image.png" />
     <Resource Include="images\XDS.png" />
   </ItemGroup>
