--- a/dotNet5782_0545_8228/PL/PL.csproj
+++ b/dotNet5782_0545_8228/PL/PL.csproj
@@ -8,12 +8,14 @@
 
   <ItemGroup>
     <None Remove="images\box.png" />
+    <None Remove="images\charging-station-bw.png" />
     <None Remove="images\charging-station.png" />
     <None Remove="images\drone-package.png" />
     <None Remove="images\drone-x.png" />
     <None Remove="images\drone.png" />
     <None Remove="images\dronenopackage.png" />
     <None Remove="images\update-drone-image.png" />
+    <None Remove="images\user.png" />
     <None Remove="images\XDS.png" />
   </ItemGroup>
 
@@ -23,12 +25,14 @@
 
   <ItemGroup>
     <Resource Include="images\box.png" />
+    <Resource Include="images\charging-station-bw.png" />
     <Resource Include="images\charging-station.png" />
     <Resource Include="images\drone-package.png" />
     <Resource Include="images\drone-x.png" />
     <Resource Include="images\drone.png" />
     <Resource Include="images\dronenopackage.png" />
     <Resource Include="images\update-drone-image.png" />
+    <Resource Include="images\user.png" />
     <Resource Include="images\XDS.png" />
   </ItemGroup>
 
