--- a/dotNet5782_0545_8228/DALObject/DALObject.csproj
+++ b/dotNet5782_0545_8228/DALObject/DALObject.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DALFacade\DALFacade.csproj" />
+    <ProjectReference Include="..\DALUtils\DALUtils.csproj" />
   </ItemGroup>
 
 </Project>
