--- a/dotNet5782_0545_8228/PL/PL.csproj
+++ b/dotNet5782_0545_8228/PL/PL.csproj
@@ -14,6 +14,7 @@
     <None Remove="images\drone-x.png" />
     <None Remove="images\drone.png" />
     <None Remove="images\dronenopackage.png" />
+    <None Remove="images\list-text.png" />
     <None Remove="images\update-drone-image.png" />
     <None Remove="images\user.png" />
     <None Remove="images\XDS.png" />
@@ -31,6 +32,7 @@
     <Resource Include="images\drone-x.png" />
     <Resource Include="images\drone.png" />
     <Resource Include="images\dronenopackage.png" />
+    <Resource Include="images\list-text.png" />
     <Resource Include="images\update-drone-image.png" />
     <Resource Include="images\user.png" />
     <Resource Include="images\XDS.png" />
