--- a/dotNet5782_0545_8228/BL_TestSuite/ConsoleUI_BL.csproj
+++ b/dotNet5782_0545_8228/BL_TestSuite/ConsoleUI_BL.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BL\BL.csproj" />
+    <ProjectReference Include="..\DALFacade\DALFacade.csproj" />
   </ItemGroup>
 
 </Project>
